// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-react-code-block should inject code for code block component with children 1`] = `
"\\"use strict\\";

var a = React.createElement(CodeBlock, {
  code: \\"<div className=\\\\\\"foobar\\\\\\" onClick={() => {}} />\\"
}, React.createElement(\\"div\\", {
  className: \\"foobar\\",
  onClick: function onClick() {}
}));"
`;

exports[`babel-plugin-react-code-block should inject code for code block component with children and use maxLineLength attribute with prettier 1`] = `
"\\"use strict\\";

var a = React.createElement(CodeBlock, {
  maxLineLength: 10,
  code: \\"<div\\\\\\\\n  className=\\\\\\"foobar\\\\\\"\\\\\\\\n  onClick={() => {}}\\\\\\\\n/>\\"
}, React.createElement(\\"div\\", {
  className: \\"foobar\\",
  onClick: function onClick() {}
}));"
`;

exports[`babel-plugin-react-code-block should not inject code for code block component without children 1`] = `
"\\"use strict\\";

var a = React.createElement(CodeBlock, {
  code: \\"foobar\\"
});"
`;

exports[`babel-plugin-react-code-block should not touch non-code block component component 1`] = `
"\\"use strict\\";

var a = React.createElement(NotCodeBlock, null, React.createElement(\\"div\\", null, React.createElement(\\"span\\", null)));"
`;
